WEBSITE-2852 - UI issue logging-in mobile entrypage on ios device.

--- a/assets/sass/components/_modal.scss
+++ b/assets/sass/components/_modal.scss
@@ -92,6 +92,14 @@
     }
 }
 
+// Browsers which fully support CSS Environment variables (iOS 11.2+).
+@supports (padding-top: env(safe-area-inset-top)) {
+    .modal-content {
+        --safe-area-inset-top: env(safe-area-inset-top);
+        height: calc(100% + var(--safe-area-inset-top));
+    }
+}
+
 // Standard modal
 .modal-standard {
     .modal-content {
